# IoTControl

./: .gitignore  README.md
backend/cmd/tcp_client/: main  main.go
backend/tcp_client/go/: client.go
backend/tcp_client/go/test/: test.go
backend/tcp_client/internal/tcp_client/: client.go
c++/: CMakeLists.txt
c++/docs/: IoTDesign.wsd  design.drawio  design.txt  design.wsd
c++/include/: ClientHandler.h  CommandProcessor.h  CommandProcessorAdapter.h  CommandProcessorAdapterFactory.h  IClientDataProcessor.h  IClientDataProcessorFactory.h  TCPServer.h  main.h  server.h
c++/include/Mqtt/: MQTTPublisher.h  MqqtClient.h
c++/include/include/: IClientDataProcessorFactory.h
c++/include/json/: JSONProcessor.h  JSONReceiver.h  JSONSender.h
c++/mockClient/: TCPClient  TCPClient.cpp  client
c++/myPro/src/: server  server.cpp
c++/myPro/src/go/: client.go
c++/source/: CMakeLists.txt
c++/source/include/: control.h  http_TCPServer.h  main.h  server.h
c++/source/src/: control.cpp  http_TCPServer.cpp  main.cpp  server.cpp
c++/src/: ClientHandler.cpp  CommandProcessor.cpp  CommandProcessorAdapter.cpp  CommandProcessorAdapterFactory.cpp  IClientDataProcessor.cpp  TCPServer.cpp  control.cpp  main.cpp  sendJSON.cpp  server.cpp  try  try.cpp
c++/src/json/: JSONProcessor.cpp  JSONReceiver.cpp  JSONSender.cpp
c++/src/mqtt/: MQTTClient.cpp  MQTTPublisher.cpp
c++/tests/: a.out
frontend/IoTControl/IoTControl/: package-lock.json
frontend/IoTControl/src/: index.html
frontend/IoTControl/src/app/: app.component.ts  app.module.ts  app.routes.ts
frontend/IoTControl/src/app/account/: account.component.html  account.component.ts
frontend/IoTControlAngular/src/: main.ts
frontend/IoTControlAngular/src/app/: app.routes.ts
frontend/IoTControlAngular/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/IoTControlAngular/src/app/login/: login.component.html  login.component.ts
frontend/iot-control/: package-lock.json  package.json
frontend/iot-control/.next/: app-build-manifest.json  trace
frontend/iot-control/.next/cache/: .rscinfo
frontend/iot-control/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/iot-control/.next/server/chunks/: [root of the server]__73749f46._.js.map  node_modules_next_f8b8ec51._.js.map
frontend/iot-control/.next/static/chunks/: [root of the server]__140ccadf._.css  [root of the server]__140ccadf._.css.map  [root of the server]__3a40d6d2._.js  [root of the server]__3a40d6d2._.js.map  [root of the server]__73499ecc._.js  [root of the server]__73499ecc._.js.map  _0831b289._.js  _0831b289._.js.map  _284f3ef7._.js  _284f3ef7._.js.map  node_modules_@swc_helpers_cjs_00636ac3._.js.map  node_modules_beb00741._.js.map  node_modules_next_dist_1a6ee436._.js.map  node_modules_next_dist_3bfaed20._.js.map  node_modules_next_dist_client_43e3ffb8._.js  node_modules_next_dist_client_43e3ffb8._.js.map  node_modules_next_dist_compiled_2ce9398a._.js.map  node_modules_next_dist_ea69acce._.js.map  node_modules_react-dom_82bb97c6._.js.map  (+4 more)
frontend/iot-control/src/app/: page.tsx
frontend/iot-control/src/components/: Navbar.tsx
(+38 files in other folders)
